<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="backlogItem"
            type="jzam.backlog.backlogtracker.database.BacklogItem"/>
        <variable
            name="clickListener"
            type="jzam.backlog.backlogtracker.backlogtracker.BacklogItemListener" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="#FFFFFF"
        android:onClick="@{() -> clickListener.onClick(backlogItem)}">

        <ImageView
            android:id="@+id/backlog_item_type_image"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:contentDescription="@string/type_image_description"
            app:itemTypeImage="@{backlogItem}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_baseline_videogame_asset_24" />

        <TextView
            android:id="@+id/backlog_item_name"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/tv_height"
            android:layout_marginStart="@dimen/margin_zero"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_tiny"
            app:itemName="@{backlogItem}"
            app:layout_constraintEnd_toStartOf="@id/backlog_item_progress"
            app:layout_constraintStart_toEndOf="@id/backlog_item_type_image"
            app:layout_constraintTop_toTopOf="@id/backlog_item_type_image"
            tools:text="@string/placeholder_item_name" />

        <TextView
            android:id="@+id/backlog_item_progress"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/tv_height"
            android:layout_marginStart="@dimen/margin_tiny"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_tiny"
            app:itemProgress="@{backlogItem}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/backlog_item_name"
            app:layout_constraintTop_toTopOf="@id/backlog_item_type_image"
            tools:text="@string/placeholder_item_progress" />

        <TextView
            android:id="@+id/backlog_item_platform"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/tv_height"
            android:layout_marginTop="@dimen/margin_small"
            app:itemPlatform="@{backlogItem}"
            app:layout_constraintEnd_toStartOf="@id/backlog_item_genre"
            app:layout_constraintStart_toEndOf="@id/backlog_item_type_image"
            app:layout_constraintTop_toBottomOf="@id/backlog_item_name"
            tools:text="@string/placeholder_item_platform" />

        <TextView
            android:id="@+id/backlog_item_genre"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/tv_height"
            android:layout_marginTop="@dimen/margin_small"
            app:itemGenre="@{backlogItem}"
            app:layout_constraintEnd_toStartOf="@id/backlog_item_sort_value"
            app:layout_constraintStart_toEndOf="@id/backlog_item_platform"
            app:layout_constraintTop_toBottomOf="@id/backlog_item_name"
            tools:text="@string/placeholder_item_genre" />

        <TextView
            android:id="@+id/backlog_item_sort_value"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/tv_height"
            android:layout_marginTop="@dimen/margin_small"
            app:itemSortValue="@{backlogItem}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/backlog_item_genre"
            app:layout_constraintTop_toBottomOf="@id/backlog_item_name"
            tools:text="@string/placeholder_item_sort" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>