<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="addItemViewModel"
            type="jzam.backlog.backlogtracker.additem.AddItemViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".addItem.AddItemFragment">

            <Button
                android:id="@+id/add_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_cancel"
                android:onClick="@{() -> addItemViewModel.onCancelClicked()}"
                app:layout_constraintEnd_toStartOf="@id/add_confirm_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_item_progress_total" />

            <Button
                android:id="@+id/add_confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_confirm"
                android:onClick="@{() -> addItemViewModel.onConfirmClicked()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/add_cancel_button"
                app:layout_constraintTop_toBottomOf="@id/add_item_progress_total" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@={addItemViewModel.name}"
                    android:imeOptions="actionDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_item_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_item_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@={addItemViewModel.type}"
                    android:imeOptions="actionDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_item_sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sort_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_item_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@={addItemViewModel.sortValue}"
                    android:imeOptions="actionDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_item_platform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/platform_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_item_sort">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@={addItemViewModel.platform}"
                    android:imeOptions="actionDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_item_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/genre_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_item_platform">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@={addItemViewModel.genre}"
                    android:imeOptions="actionDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_item_progress_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/progress_done_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_item_genre">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:text="@={addItemViewModel.progressDone}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_item_progress_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/progress_total_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_item_progress_done">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:text="@={addItemViewModel.progressTotal}" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>