<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="editItemViewModel"
            type="jzam.backlog.backlogtracker.edititem.EditItemViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".editItem.EditItemFragment">

            <Button
                android:id="@+id/edit_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_cancel"
                android:onClick="@{() -> editItemViewModel.onCancelClicked()}"
                app:layout_constraintEnd_toStartOf="@id/edit_delete_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_item_progress_total" />

            <Button
                android:id="@+id/edit_delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_delete"
                android:onClick="@{() -> editItemViewModel.onDeleteClicked()}"
                app:layout_constraintEnd_toStartOf="@id/edit_confirm_button"
                app:layout_constraintStart_toEndOf="@id/edit_cancel_button"
                app:layout_constraintTop_toBottomOf="@id/edit_item_progress_total" />

            <Button
                android:id="@+id/edit_confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_confirm"
                android:onClick="@{() -> editItemViewModel.onConfirmClicked()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/edit_delete_button"
                app:layout_constraintTop_toBottomOf="@id/edit_item_progress_total" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@={editItemViewModel.name}"
                    android:imeOptions="actionDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:itemNameEdit="@{editItemViewModel.item}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_item_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_item_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@={editItemViewModel.type}"
                    android:imeOptions="actionDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:itemTypeEdit="@{editItemViewModel.item}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_item_sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sort_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_item_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@={editItemViewModel.sortValue}"
                    android:imeOptions="actionDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:itemSortEdit="@{editItemViewModel.item}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_item_platform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/platform_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_item_sort">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@={editItemViewModel.platform}"
                    android:imeOptions="actionDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:itemPlatformEdit="@{editItemViewModel.item}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_item_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/genre_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_item_platform">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@={editItemViewModel.genre}"
                    android:imeOptions="actionDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:itemGenreEdit="@{editItemViewModel.item}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_item_progress_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/progress_done_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_item_genre">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:text="@={editItemViewModel.progressDone}"
                    app:itemProgressDoneEdit="@{editItemViewModel.item}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_item_progress_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/progress_total_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_item_progress_done">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:text="@={editItemViewModel.progressTotal}"
                    app:itemProgressTotalEdit="@{editItemViewModel.item}" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>