<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="searchGameDetailViewModel"
            type="jzam.backlog.backlogtracker.searchgamedetail.SearchGameDetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            tools:context=".searchgamedetail.SearchGameDetailFragment">

            <ImageView
                android:id="@+id/search_game_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:padding="2dp"
                android:contentDescription="@string/item_image_desc"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:imageUrl="@{searchGameDetailViewModel.imageUrl}"
                tools:src="@tools:sample/backgrounds/scenic"/>

            <TextView
                android:id="@+id/search_game_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_game_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:setText="@{searchGameDetailViewModel.name}"
                tools:text="@string/placeholder_item_name" />

            <TextView
                android:id="@+id/search_game_detail_platform_title"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/platform_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_game_detail_name" />

            <Spinner
                android:id="@+id/search_game_detail_platform_spinner"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/game_platform_array"
                android:prompt="@string/platform_label"
                tools:setOnItemSelectedListener="@{searchGameDetailViewModel.platformSpinnerListener}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_game_detail_platform_title" />

            <TextView
                android:id="@+id/search_game_detail_genre_title"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genre_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_game_detail_platform_spinner" />

            <Spinner
                android:id="@+id/search_game_detail_genre_spinner"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/game_genre_array"
                android:prompt="@string/genre_label"
                tools:setOnItemSelectedListener="@{searchGameDetailViewModel.genreSpinnerListener}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_game_detail_genre_title" />

            <TextView
                android:id="@+id/search_game_detail_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_game_detail_genre_spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:setText="@{searchGameDetailViewModel.description}"
                tools:text="@string/placeholder_item_name" />

            <Button
                android:id="@+id/search_game_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_cancel"
                android:onClick="@{() -> searchGameDetailViewModel.onBackClicked()}"
                app:layout_constraintEnd_toStartOf="@id/search_game_add_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_game_detail_description" />

            <Button
                android:id="@+id/search_game_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_confirm"
                android:onClick="@{() -> searchGameDetailViewModel.onAddClicked()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/search_game_back_button"
                app:layout_constraintTop_toBottomOf="@id/search_game_detail_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>